--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-<header><title>This is title</title></header>
-<body>
+<header>
+<title>FunKadaa</title>
+</header>
+<body  background= "Logo.jpg"  id="image">>
 Hello world
 </body>
 </html>
