--- a/index.html
+++ b/index.html
@@ -1,21 +1,8 @@
-<!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>FunKadaa</title>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-</head>
-
-<body  >
-
-<img src="Logo.jpg" id="image" alt="Logo" ></img>
-
-<div id="div1">
-<a class="F">F</a>
-<a class="text">un</a>
-<a class="K">K</a>
-<a class="text">adaa</a>
-</div>
-
+<header>
+<title>FunKadaa</title>
+</header>
+<body  background= "Logo.jpg"  id="image">>
+Hello world
 </body>
 </html>
