--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
-<header>
-<title>FunKadaa</title>
-</header>
-<body  background= "Logo.jpg"  id="image">>
+<header><title>This is title</title></header>
+<body>
 Hello world
 </body>
 </html>
