--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
-<header><title>This is title</title></header>
+<header><title>FunKadaa</title></header>
 <body>
-Hello world
-</body>
+Testing</body>
 </html>
