--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-<header><title>FunKadaa</title></header>
+ <meta charset="utf-8">
+<header><title>FunKadaa</title>
+ <link rel="stylesheet" type="text/css" href="mystyle.css">
+</header>
 <body>
 Testing</body>
 </html>
