--- a/index.html
+++ b/index.html
@@ -4,5 +4,13 @@
  <link rel="stylesheet" type="text/css" href="mystyle.css">
 </header>
 <body>
-Testing</body>
+<img src="Logo.jpg" id="image" alt="Logo" ></img>
+
+<div id="div1">
+<a class="F">F</a>
+<a class="text">un</a>
+<a class="K">K</a>
+<a class="text">adaa</a>
+</div>
+</body>
 </html>
