--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
 <html>
- <meta charset="utf-8">
-<header><title>FunKadaa</title>
- <link rel="stylesheet" type="text/css" href="mystyle.css">
-</header>
+<header><title>This is title</title></header>
 <body>
-<img src="Logo.jpg" id="image" alt="Logo" ></img>
-
-<div id="div1">
-<a class="F">F</a>
-<a class="text">un</a>
-<a class="K">K</a>
-<a class="text">adaa</a>
-</div>
+Hello world
 </body>
 </html>
