--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
-<header><title>This is title</title></header>
+<head><title>FunKadaa</title>
+<link rel="stylesheet" type="text/css" href="mystyle.css"></title></head>
 <body>
-Hello world
+
+<img src="Logo.jpg" id="image" alt="Logo" ></img>
+
+<div id="div1">
+<a class="F">F</a>
+<a class="text">un</a>
+<a class="K">K</a>
+<a class="text">adaa</a>
+</div>
 </body>
 </html>
