--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css"></title></head>
 <body>
 
-<img src="Logo.jpg" id="image" alt="Logo" ></img>
-
+<img src="Logo.png" id="image" alt="Logo" ></img>
+<h1>Launching Soon</h1>
+<div id="clockdiv">
+  <div>
+    <span class="days"></span>
+    <div class="smalltext">Days</div>
+  </div>
+  <div>
+    <span class="hours"></span>
+    <div class="smalltext">Hours</div>
+  </div>
+  <div>
+    <span class="minutes"></span>
+    <div class="smalltext">Minutes</div>
+  </div>
+  <div>
+    <span class="seconds"></span>
+    <div class="smalltext">Seconds</div>
+  </div>
+</div>
+<script src="myscript.js"></script>
 </body>
 </html>
