--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
 <html>
-<header><title>This is title</title></header>
+<head><title>FunKadaa</title>
+<link rel="stylesheet" type="text/css" href="mystyle.css"></title></head>
 <body>
-Hello world
+<img src="latestLogo.png" id="image" alt="Logo" ></img>
+<h1>Launching Soon</h1>
+<div id="p1"><a  href="https://www.facebook.com/FunKadaa/" class="fa fa-facebook" target="blank">
+  <img  src="faceb.png" width="09%" 
+height="auto"></a> </div>
+<div id="p2"><a   href="https://www.instagram.com/funkadaa/?hl=en" class="fa fa-instagram" target="blank">
+  <img id="p2" src="insa.png" width="8%" height="auto">
+</a></div>
+<div id="clockdiv">
+  <div>
+    <span class="days"></span>
+    <div class="smalltext">Days</div>
+  </div>
+  <div>
+    <span class="hours"></span>
+    <div class="smalltext">Hours</div>
+  </div>
+  <div>
+    <span class="minutes"></span>
+    <div class="smalltext">Minutes</div>
+  </div>
+  <div>
+    <span class="seconds"></span>
+    <div class="smalltext">Seconds</div>
+  </div>
+</div>
+
+
+
+
+<script src="myscript.js"></script>
 </body>
 </html>
