--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 <body>
 <img src="latestLogo.png" id="image" alt="Logo" ></img>
 <h1>Launching Soon</h1>
+
 <div  class="1">
  <span id="p1">
-<a  href="https://www.facebook.com/FunKadaa/" class="fa fa-facebook" target="blank"><img  src="faceb.png" width="14%" 
-height="auto"></a>
-</span></div>
-<div class="1">
-<span >
-<a id="p2"  href="https://www.instagram.com/funkadaa/?hl=en" class="fa fa-instagram" target="blank">
-  <img src="insa.png" width="8%" height="auto"></a>
+<a  href="https://www.facebook.com/FunKadaa/" class="fa fa-facebook" target="blank"><img  src="faceb.png" width="9%" 
+height="auto">
+</a>
+
+</span>
+<span id="p2" >
+<a   href="https://www.instagram.com/funkadaa/?hl=en" class="fa fa-instagram" target="blank">
+  <img src="insa.png" width="8%" height="auto">
+</a>
 </span>
 </div>
+
 
 <div id="clockdiv">
   <div>
