--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <h1>Launching Soon</h1>
 
 <div  class="1">
- <span id="p1">
+ <div id="p1">
 <a  href="https://www.facebook.com/FunKadaa/" class="fa fa-facebook" target="blank"><img  src="faceb.png" width="9%" 
 height="auto">
 </a>
 
-</span>
-<span id="p2" >
+</div>
+<div id="p2" >
 <a   href="https://www.instagram.com/funkadaa/?hl=en" class="fa fa-instagram" target="blank">
   <img src="insa.png" width="8%" height="auto">
 </a>
-</span>
+</div>
 </div>
 
 
