--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
 <div  class="1">
  <div id="p1">
-<a  href="https://www.facebook.com/FunKadaa/" class="fa fa-facebook" target="blank"><img  src="faceb.png" width="14%" 
+<a  href="https://www.facebook.com/FunKadaa/" class="fa fa-facebook" target="blank" width="14%" 
+height="auto"><img  src="faceb.png" width="14%" 
 height="auto">
 </a>
 
 </div>
 <div id="p2" >
-<a   href="https://www.instagram.com/funkadaa/?hl=en" class="fa fa-instagram" target="blank">
+<a  href="https://www.instagram.com/funkadaa/?hl=en" class="fa fa-instagram" target="blank"  width="8%" height="auto">
   <img src="insa.png" width="8%" height="auto">
 </a>
 </div>
@@ -38,8 +39,6 @@ height="auto">
     <div class="smalltext">Seconds</div>
   </div>
 </div>
-
-
 
 
 <script src="myscript.js"></script>
