--- a/WebApplication1/WebApplication1/index.html
+++ b/WebApplication1/WebApplication1/index.html
@@ -203,16 +203,16 @@
                 </div>
             </div>
             <div id="follows">
-                <a href="https://www.facebook.com" target="_blank" >
+                <a href="https://www.facebook.com/FunKadaa/" target="_blank" >
                     <img src="Images/fb.png" style="width:150px; height:auto; padding-right:15px;" />
                 </a>
-                <a href="https://www.twitter.com" target="_blank" >
+                <a href="https://twitter.com/Funkadaa_" target="_blank" >
                     <img src="Images/twitter.png"  style="width:150px; height:auto;padding-right:15px;" />
                 </a>
-                <a href="https://www.instagram.com" target="_blank" >
+                <a href="https://www.instagram.com/funkadaa/?hl=en" target="_blank" >
                     <img src="Images/insaaa.png"style="width:150px; height:auto;padding-right:15px;" />
                 </a>
-                <a href="https://www.youtube.com"target="_blank" >
+                <a href="https://www.youtube.com/channel/UCSFkI44j_ra_Q038l0FjmWg"target="_blank" >
                     <img src="Images/you.png" alt="Go to W3Schools!" style="width:150px; height:auto;" />
                 </a>
             </div>
