--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             z-index: 9999;
             resize: none;
             padding-bottom:20px;
+            resize:none;
         }
 
         #clockdiv {
@@ -202,9 +203,9 @@
                     </div>
                 </div>
             </div>
-            <div id="follows">
+         <!--   <div id="follows">
                 <a href="https://www.facebook.com/FunKadaa/" target="_blank" >
-                    <img src="Images/fb.png" style="width:150px; height:auto; padding-right:15px;" />
+                    <img src="Images/fb.png" style="width:150px; height:auto; padding-right:15px; " />
                 </a>
                 <a href="https://twitter.com/Funkadaa_" target="_blank" >
                     <img src="Images/twitter.png"  style="width:150px; height:auto;padding-right:15px;" />
@@ -213,9 +214,9 @@
                     <img src="Images/insaaa.png"style="width:150px; height:auto;padding-right:15px;" />
                 </a>
                 <a href="https://www.youtube.com/channel/UCSFkI44j_ra_Q038l0FjmWg"target="_blank" >
-                    <img src="Images/you.png" alt="Go to W3Schools!" style="width:150px; height:auto;" />
+                    <img src="Images/you.png" alt="Go to W3Schools!" style="width:150px; height:auto; " />
                 </a>
-            </div>
+            </div> -->
         </div>
     </form>
 </body>
