--- a/WebApplication1/WebApplication1/index.html
+++ b/WebApplication1/WebApplication1/index.html
@@ -67,8 +67,8 @@
             display: none;
             position: absolute;
             margin: 0 auto;
-            top: 127%;
-           left: 50%;
+         /*   top: 127%;
+           left: 50%;*/
             transform: translate(-50%, -50%);
             z-index: 9999;
             resize: none;
@@ -182,7 +182,20 @@
             <h1 id="welcome">WELCOME</h1>
             <h1 id="to">TO</h1>
        <img id="popup" src="Images/latestLogo.png" alt="popup" style="height:auto; padding:0px; margin:0px; width:45%; resize:none;"/>   
-            
+            <div id="follows">
+                <a href="https://www.facebook.com/FunKadaa/" target="_blank">
+                    <img src="Images/fb.png" style="width:150px; height:auto; padding-right:15px; " />
+                </a>
+                <a href="https://twitter.com/Funkadaa_" target="_blank">
+                    <img src="Images/twitter.png" style="width:150px; height:auto;padding-right:15px;" />
+                </a>
+                <a href="https://www.instagram.com/funkadaa/?hl=en" target="_blank">
+                    <img src="Images/insaaa.png" style="width:150px; height:auto;padding-right:15px;" />
+                </a>
+                <a href="https://www.youtube.com/channel/UCSFkI44j_ra_Q038l0FjmWg" target="_blank">
+                    <img src="Images/you.png" alt="Go to W3Schools!" style="width:150px; height:auto; " />
+                </a>
+            </div>
             <div id="clock" style="padding:0px;">
                 <div id="clockdiv" style="padding:0px;">
                   <h1 style="font-family:'Times New Roman'; padding:0px; color:brown;">Launching In:</h1>
