--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         #contents {
-            height: 40em;
+            height: 30em;
             position: relative;
             resize: none;
         }
@@ -44,7 +44,7 @@
             display: none;
             position: absolute;
             margin: 0 auto;
-            top: 50%;
+            top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 9999;
@@ -64,9 +64,9 @@
 
         #follows {
             display: none;
-            position: absolute;
+            position:fixed;
             margin: 0 auto;
-            top: 60%;
+            top: 50%;
             left: 8%;
             transform: translate(-50%, -50%);
             z-index: 9999;
