--- a/index.html
+++ b/index.html
@@ -194,16 +194,16 @@
                 </div>
             </div>
             <div id="follows">
-                <a href="https://www.facebook.com/FunKadaa">
-                    <img src="Images/fb.png" style="width:200px; height:auto; resize:none;" target="_blank" />
+                <a href="https://www.facebook.com/FunKadaa" target="_blank">
+                    <img src="Images/fb.png" style="width:200px; height:auto; resize:none;"  />
                 </a>
                 <br /><br />
-                <a href="https://www.twitter.com/Funkadaa_">
-                    <img src="Images/twitter.png" style="width:200px; height:auto; resize:none;" target="_blank" />
+                <a href="https://www.twitter.com/Funkadaa_" target="_blank">
+                    <img src="Images/twitter.png" style="width:200px; height:auto; resize:none;"  />
                 </a>
                 <br /><br />
-                <a href="https://www.instagram.com/funkadaa">
-                    <img src="Images/insaaa.png" style="width:200px; height:auto; resize:none;" target="_blank" />
+                <a href="https://www.instagram.com/funkadaa" target="_blank">
+                    <img src="Images/insaaa.png" style="width:200px; height:auto; resize:none;"  />
                 </a>
                 <br /><br />
                 <a href="https://www.youtube.com/channel/UCSFkl44j_ra_Q03810FjmWg" target="_blank">
