--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             margin-right: -50%;
             transform: translate(-50%, -50%);
             resize: none;
+            align-content:center;
+
         }
 
         #popup {
@@ -67,7 +69,7 @@
             position:fixed;
             margin: 0 auto;
             top: 50%;
-            left: 8%;
+            left: 9%;
             transform: translate(-50%, -50%);
             z-index: 9999;
             resize: none;
@@ -171,6 +173,7 @@
         <div id="load"></div>
         <div id="contents">
             <h1 id="welcome">WELCOME TO</h1>
+            
             <img id="popup" src="Images/latestLogo.png" alt="popup" style="height:70%; width:auto; resize:none;" />
             <div id="clock">
                 <div id="clockdiv">
