--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title>FunKadaa</title>
+    <link rel="icon" href="23144_NP6_icon.ico" /> 
+     <title>FunKadaa</title>
 </head>
 <body>
     <style type="text/css">
@@ -209,8 +210,8 @@
                     <img src="Images/insaaa.png" style="width:200px; height:auto; resize:none;"  />
                 </a>
                 <br /><br />
-                <a href="https://www.youtube.com/channel/UCSFkl44j_ra_Q03810FjmWg" target="_blank">
-                    <img src="Images/you.png" alt="Go to W3Schools!" style="width:200px; height:auto; resize:none;" />
+                <a href="https://www.youtube.com/watch?v=EEzfRvtqXEI" target="_blank">
+                    <img src="Images/you.png"  style="width:200px; height:auto; resize:none;" />
                 </a>
             </div>
         </div>
