--- a/WebApplication1/WebApplication1/index.html
+++ b/WebApplication1/WebApplication1/index.html
@@ -210,7 +210,7 @@
                     <img src="Images/insaaa.png" style="width:200px; height:auto; resize:none;"  />
                 </a>
                 <br /><br />
-                <a href="https://www.youtube.com/watch?v=EEzfRvtqXEI" target="_blank">
+                <a href="https://www.youtube.com/channel/UCSFkI44j_ra_Q038l0FjmWg" target="_blank">
                     <img src="Images/you.png"  style="width:200px; height:auto; resize:none;" />
                 </a>
             </div>
