--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             <img id="popup" src="Images/latestLogo.png" alt="popup" style="height:70%; width:auto; resize:none;" />
             <div id="clock">
                 <div id="clockdiv">
-                    <h1 style="font-family:'Times New Roman';color:brown;">Launching In:</h1>
-                    <div>
+                    <h1 style="font-family:'Times New Roman';color:brown;">Launching Soon</h1>
+             <!--       <div>
                         <span class="days"></span>
                         <div class="smalltext">Days</div>
                     </div>
@@ -195,8 +195,10 @@
                         <span class="seconds"></span>
                         <div class="smalltext">Seconds</div>
                     </div>
+                 -->
                 </div>
             </div>
+
             <div id="follows">
                 <a href="https://www.facebook.com/FunKadaa" target="_blank">
                     <img src="Images/fb.png" style="width:200px; height:auto; resize:none;"  />
