--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head runat="server">
     <link rel="icon" href="23144_NP6_icon.ico" /> 
      <title>FunKadaa</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120437949-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120437949-1');
+</script>
+
 </head>
 <body>
     <style type="text/css">
